@@ -26,6 +26,7 @@ lockPref("toolkit.startup.max_resumed_crashes", -1);
 // directive worked as advertised.  But it doesn't appear to actually take.
 // defaultPref("extensions.torbutton.security_slider", 1);
 
-// Disable the `about:addons`->"Get Addons" pane because it is unsafe, and
-// Mozilla gets "telemetery" using Google Analytics.
+// Disable the `about:addons`->"Get Addons" pane because it is unsafe,  Mozilla
+// gets "telemetery" using Google Analytics, and extensions are individually
+// read-only bind mounted in, so it will not work at all.
 lockPref("extensions.getAddons.showPane", false);
