@@ -60,16 +60,15 @@ type configDialog struct {
 	torSystemIndicator *gtk3.Box
 
 	// Sandbox config elements.
-	pulseAudioSwitch         *gtk3.Switch
-	avCodecSwitch            *gtk3.Switch
-	circuitDisplaySwitch     *gtk3.Switch
-	volatileExtensionsSwitch *gtk3.Switch
-	displayBox               *gtk3.Box
-	displayEntry             *gtk3.Entry
-	downloadsDirBox          *gtk3.Box
-	downloadsDirChooser      *gtk3.FileChooserButton
-	desktopDirBox            *gtk3.Box
-	desktopDirChooser        *gtk3.FileChooserButton
+	pulseAudioSwitch     *gtk3.Switch
+	avCodecSwitch        *gtk3.Switch
+	circuitDisplaySwitch *gtk3.Switch
+	displayBox           *gtk3.Box
+	displayEntry         *gtk3.Entry
+	downloadsDirBox      *gtk3.Box
+	downloadsDirChooser  *gtk3.FileChooserButton
+	desktopDirBox        *gtk3.Box
+	desktopDirChooser    *gtk3.FileChooserButton
 }
 
 const proxySOCKS4 = "SOCKS 4"
@@ -112,9 +111,9 @@ func (d *configDialog) loadFromConfig() {
 	d.pulseAudioSwitch.SetActive(d.ui.Cfg.Sandbox.EnablePulseAudio)
 	d.avCodecSwitch.SetActive(d.ui.Cfg.Sandbox.EnableAVCodec)
 	d.circuitDisplaySwitch.SetActive(d.ui.Cfg.Sandbox.EnableCircuitDisplay)
-	d.volatileExtensionsSwitch.SetActive(d.ui.Cfg.Sandbox.VolatileExtensionsDir)
 	if d.ui.Cfg.Sandbox.Display != "" {
 		d.displayEntry.SetText(d.ui.Cfg.Sandbox.Display)
+		forceAdv = true
 	}
 	if d.ui.Cfg.Sandbox.DownloadsDir != "" {
 		d.downloadsDirChooser.SetCurrentFolder(d.ui.Cfg.Sandbox.DownloadsDir)
@@ -194,7 +193,6 @@ func (d *configDialog) onOk() error {
 	d.ui.Cfg.Sandbox.SetEnablePulseAudio(d.pulseAudioSwitch.GetActive())
 	d.ui.Cfg.Sandbox.SetEnableAVCodec(d.avCodecSwitch.GetActive())
 	d.ui.Cfg.Sandbox.SetEnableCircuitDisplay(d.circuitDisplaySwitch.GetActive())
-	d.ui.Cfg.Sandbox.SetVolatileExtensionsDir(d.volatileExtensionsSwitch.GetActive())
 	if s, err := d.displayEntry.GetText(); err != nil {
 		return err
 	} else {
@@ -380,9 +378,6 @@ func (ui *gtkUI) initConfigDialog(b *gtk3.Builder) error {
 		return err
 	}
 	if d.circuitDisplaySwitch, err = getSwitch(b, "circuitDisplaySwitch"); err != nil {
-		return err
-	}
-	if d.volatileExtensionsSwitch, err = getSwitch(b, "volatileExtensionsSwitch"); err != nil {
 		return err
 	}
 	if d.displayBox, err = getBox(b, "displayBox"); err != nil {
