@@ -1,4 +1,5 @@
 Changes in version 0.0.11 - UNRELEASED:
+ * Bug 22910: Deprecate the volatile extension dir option.
 
 Changes in version 0.0.10 - 2017-07-12:
  * Bug 22829: Remove default obfs4 bridge riemann.
